k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-test
  labels:
    app: alb-test
spec:
  type: ClusterIP
  selector:
    app: alb-test
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
