k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-test
  labels:
    app: alb-test
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]' # force HTTPS listener
    external-dns.alpha.kubernetes.io/hostname: "alb-test.dev.brave.int.bayer.com" # set the hostname for external-dns to create the correct DNS record
spec:
  ingressClassName: alb-test
  tls:
    - hosts:
        - alb-test.dev.brave.int.bayer.com # auto-selects the certificate from ACM based on the hostname
  rules:
    - host: alb-test.dev.brave.int.bayer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alb-test
                port:
                  number: 8080
